--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </button>
           <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+              <a class="navbar-brand text-light" href="#"><img src="images/logo.svg"></a>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
@@ -62,7 +62,7 @@
                   </ul>
                 </li>
               </ul>
-              <div>
+              <div id="nav-buttons">
                 <a id="login" type="submit">Login</a>
                 <a class="btn" id="signup" type="submit" >Sign Up</a>
               </div>
