--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
   <h1 id="section-1-title">Designed for the future</h1>
   <section id="section-1">
+    <img id="section-1-img-mobile"src="images/illustration-editor-mobile.svg">
     <div id="section-1-body-1">
       <div id="section-1-body-1-content-1">
         <h3>Introducing an extensible editor</h3><br>
@@ -98,6 +99,7 @@
 
   <section id="section-2">
     <img id="section-2-img" src="images/illustration-phones.svg">
+    <img id="section-2-img-mobile" src="images/illustration-phones.svg">
     <div id="section-2-body-1">
       <div id="section-2-body-1-content-1">
         <h1>State of the Art Infrastructure</h1><br>
@@ -106,8 +108,10 @@
       </div>
     </div>
   </section>
+  
   <section id="section-3">
     <img id="section-3-img" src="images/illustration-laptop-desktop.svg">
+    <img id="section-3-img-mobile" src="images/illustration-laptop-mobile.svg">
     <div id="section-3-body-1">
       <div id="section-3-body-1-content-1">
         <h2>Free, open, simple</h2><br>
@@ -125,7 +129,7 @@
     <a class="navbar-brand text-light" href="#"><img src="images/logo.svg"></a>
     <div id="footer-body-1">
       <div>
-        <a><strong>Product</strong></a>
+        <a class="footer-titles"><strong>Product</strong></a>
         <br>
         <a class="text-lightgrey">Overview</a>
         <a class="text-lightgrey">Pricing</a>
@@ -134,7 +138,7 @@
         <a class="text-lightgrey">Integrations</a>
       </div>
       <div>
-        <a><strong>Company</strong></a>
+        <a class="footer-titles"><strong>Company</strong></a>
         <br>
         <a class="text-lightgrey">About</a>
         <a class="text-lightgrey">Team</a>
@@ -142,7 +146,7 @@
         <a class="text-lightgrey">Careers</a>
       </div>
       <div>
-        <a><strong>Connect</strong></a>
+        <a class="footer-titles"><strong>Connect</strong></a>
         <br>
         <a class="text-lightgrey">Contact</a>
         <a class="text-lightgrey">Newsletter</a>
